--- a/member-service-default.yml
+++ b/member-service-default.yml
@@ -1,43 +1,3 @@
-server:
-  port: 8083
-eureka:
-  client:
-    service-url:
-      defaultZone: http://192.168.31.204:8082/eureka
 spring:
-  application:
-    name: member-service
-  redis:
-    host: 192.168.31.204
-    port: 6379
-    pool:
-      max-idle: 100
-      min-idle: 1
-      max-active: 1000
-      max-wait: -1
-    password: 123456
-  datasource:
-    url: jdbc:mysql://192.168.31.204:3306/beiminzhiyu-member
-    name: test
-    username: root
-    password: '@Root111111'
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    dbcp2:
-      validation-query: select 'x'
-      initial-size: 1
-      max-wait-millis: 60000
-      min-idle: 300000
-      time-between-eviction-runs-millis: 60000
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      pool-prepared-statements: true
-      max-open-prepared-statements: 20
-  activemq:
-    broker-url: tcp://192.168.31.204:61616
-    in-memory: true
-    pool:
-      enabled: false
-messages:
-  queue: messages_queue
+  profiles:
+    active: dev
